CRUD servise ready

--- a/apps/todos/src/index.html
+++ b/apps/todos/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <learning-workspace-root></learning-workspace-root>
+    <learning-workspace-root class="m-0 p-0 min-vh-100"></learning-workspace-root>
   </body>
 </html>
